Fixed menu scrolling for mobile
Made the menu bar absolutely positioned to allow scrolling when the
menu overflows the screen on mobile.

--- a/css/master.css
+++ b/css/master.css
@@ -80,6 +80,11 @@
 	.navbar-brand {
 		margin: 0 auto !important;
 	}
+	#menu-container{
+		position: absolute;
+	}
+	
+	
 }
 
 /****************************
